# samPYling

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: issue_template.md
.github/workflows/: release.yml
sampyling/: __init__.py  aas.py  constants.py  design.py
sampyling/size/: __init__.py  calculator.py
tests/: test_aas.py  test_size_calculator.py
